# mobile_robot_sandbox

./: .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.dev.yml  pixi.toml
.beads/: issues.jsonl
src/mobile_robot_algorithms/: CMakeLists.txt  package.xml
src/mobile_robot_algorithms/launch/: robot_in_maze.launch.py
src/mobile_robot_algorithms/models/maze/: maze.stl  model.config  model.sdf
src/mobile_robot_algorithms/scripts/: read_bag_data.py  right_wall_follow.py  visualize_bag_data.py
src/mobile_robot_algorithms/worlds/: maze.world
